# tempren-qt

./: pyproject.toml
tempren_qt/: gui.py
